--- a/src/apps/content-editor/src/app/components/Nav/ContentNav.less
+++ b/src/apps/content-editor/src/app/components/Nav/ContentNav.less
@@ -24,9 +24,10 @@
 .NavWrap {
   height: calc(
     100vh - 54px - 40px - 104px
-  ); // 100 - GlobalTopbar - Collapse Btn
+  ); // 100 - GlobalTopbar - Collapse Btn - (Action + Search)
   margin: 0;
   overflow-y: auto;
+  overflow-x: hidden;
   background: transparent;
   padding: 0;
 
